Fixed permission error and ignored vs folder

--- a/CaroGame/CaroGame.vcxproj
+++ b/CaroGame/CaroGame.vcxproj
@@ -38,7 +38,7 @@
     <Media Include="audio\win_effect.wav" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\..\Downloads\menu.bmp" />
+    <Image Include="..\..\..\..\Downloads\hello.bmp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
