--- a/CaroGame/CaroGame.vcxproj.filters
+++ b/CaroGame/CaroGame.vcxproj.filters
@@ -66,7 +66,7 @@
     </Media>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\..\Downloads\menu.bmp">
+    <Image Include="..\..\..\..\Downloads\hello.bmp">
       <Filter>Resource Files\image</Filter>
     </Image>
   </ItemGroup>
